--- a/composer.json
+++ b/composer.json
@@ -26,20 +26,7 @@
         }
     ],
     "require": {
-        "php": ">=5.5.0",
-        "ext-ctype": "*",
-        "ext-filter": "*",
-        "ext-hash": "*"
-    },
-    "require-dev": {
-        "dealerdirect/phpcodesniffer-composer-installer": "^0.7.0",
-        "doctrine/annotations": "^1.2",
-        "php-parallel-lint/php-console-highlighter": "^0.5.0",
-        "php-parallel-lint/php-parallel-lint": "^1.3",
-        "phpcompatibility/php-compatibility": "^9.3.5",
-        "roave/security-advisories": "dev-latest",
-        "squizlabs/php_codesniffer": "^3.6.0",
-        "yoast/phpunit-polyfills": "^1.0.0"
+        "drupal/core": "^8.8 || ^9"
     },
     "suggest": {
         "ext-mbstring": "Needed to send email in multibyte encoding charset or decode encoded addresses",
